syntax = "proto3";

package tagpost;

option java_multiple_files = true;
option java_package = "com.google.tagpost";
option java_outer_classname = "TagPostProto";

import "google/protobuf/timestamp.proto";

message Tag {
  string tag_name = 1;
}

message Thread {
  string thread_id = 1;
  Tag primary_tag = 2;
  string topic = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message Comment {
  string comment_id = 1;
  string thread_id = 2;
  string comment_content = 3;
  google.protobuf.Timestamp timestamp = 4;
  Tag primary_tag = 5;
  string username = 6;
  repeated Tag extra_tags = 7;
}

message TagStats {
  Tag tag = 1;
  /* a collection to store pairs of tag category and corresponding count */
  map<string, int32> statistics = 2;
}
